welcome.lessons.welcome.array.array667.Array667.scala.error
array667:15: error: ';' expected but ',' found.
  return nb6, nb7
            ^